[package]
name = "airo-dx"
description = "Data exchange protocol for aimosphere network"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "6.2"
async-channel = "2.3"
hex = "0.4"
libp2p = { version = "0.54", features = ["tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux"] }
serde = "1.0"

futures = { workspace = true, features = ["thread-pool"] }
jsonrpsee = { workspace = true, features = ["client-core", "macros", "server"] }

sp-core = { workspace = true, default-features = true }
sc-network = { workspace = true }
sp-runtime = { workspace = true, default-features = true }
sc-telemetry = { workspace = true }
sc-utils = { workspace = true }
