[package]
name = "pallet-execution-rpc"
description = "RPC interface for model exection flow on aimosphere network"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytes = "1.6"
jsonrpsee = { workspace = true, features = ["client-core", "macros", "server"] }
futures = { workspace = true }

sp-core = { workspace = true, default-features = true }
sc-network = { workspace = true }